--- a/FlaskFramework/flaskAndMysql/templates/admin/add.html
+++ b/FlaskFramework/flaskAndMysql/templates/admin/add.html
@@ -3,6 +3,7 @@
 <title>新增新闻</title>
 {% endblock %}
 {% block content %}
+<!--bootstrap水平排列的表单-->
 <form class="form-horizontal" role="form" method='post'>
   <div class="form-group">
     <label for="inputEmail3" class="col-sm-2 control-label">{{ form.title.label.text }}</label>
@@ -17,15 +18,19 @@
     </div>
   </div>
   <div class="form-group">
-    <label for="inputPassword3" class="col-sm-2 control-label">{{ form.news_type.label.text }}</label>
+    <label for="inputPassword3" class="col-sm-2 control-label">{{ form.type.label.text }}</label>
     <div class="col-sm-10">
-      {{ form.news_type }}
+      {{ form.type }}
     </div>
   </div>
   <div class="form-group">
-    <label for="inputPassword3" class="col-sm-2 control-label">{{ form.img_url.label.text }}</label>
+    <label for="inputPassword3" class="col-sm-2 control-label">{{ form.image.label.text }}</label>
     <div class="col-sm-10">
-      {{ form.img_url }}
+      {{ form.image }}
+        <!-- 上面代码会渲染成下面的形式
+        required属性是一个布尔属性
+        规定必须在提交表单之前填写输入字段-->
+        <!--<input type="text" name="" value="" placeholder="" required="">-->
     </div>
   </div>
   <div class="form-group">
