--- a/FlaskFramework/flaskAndMysql/templates/cat.html
+++ b/FlaskFramework/flaskAndMysql/templates/cat.html
@@ -7,7 +7,7 @@
 {% for obj in news_list %}
 <div class="list-news">
     <div class="img-content">
-        <img src="{{ obj.img_url }}" alt="图片">
+        <img src="{{ obj.image }}" alt="图片">
     </div>
     <div class="right-content">
         <h3><a href="{{ url_for('detail', pk=obj.id) }}" >{{ obj.title }}</a></h3>
