--- a/FlaskFramework/flaskAndMysql/templates/index.html
+++ b/FlaskFramework/flaskAndMysql/templates/index.html
@@ -3,7 +3,7 @@
     {% for obj in news_list %}
     <div class="list-news">
         <div class="img-content">
-            <img src="{{ obj.img_url }}" alt="图片">
+            <img src="{{ obj.image }}" alt="图片">
         </div>
         <div class="right-content">
             <p><a href="{{ url_for('detail', pk=obj.id) }}" >{{ obj.title }}</a></p>
